--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "redux": "^4.1.0",
+    "redux-form": "^8.3.10",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
