--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.1.0",
     "redux-form": "^8.3.10",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -23,12 +24,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
